Add starter code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="advicegenerator.css" media="screen" />
 </head>
 <body>
-    
+
+    <h2 class="manrope">Advice #<!-- Advice ID goes here --></h2>
+
+  <p class="manrope fs-28"><!-- Advice text goes here -->"</p>
+ 
+<!-- Footer Section -->
+<footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Ashley Perry</a>.
+  </div>
+</footer>
+
 </body>
 </html>
