--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="advicegenerator.css" media="screen" />
 </head>
 <body>
-
-    <h2 class="manrope">Advice #<!-- Advice ID goes here --></h2>
-
-  <p class="manrope fs-28"><!-- Advice text goes here -->"</p>
+    <article class="container">
+        <h1 class="manrope fs-22">Advice #</h1>
+        
+        <p class="manrope fs-28 fw-800">"Better to wake up late than early."</p>
+    </article>
  
 <!-- Footer Section -->
 <footer>
