Add more content

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Advice Generator App</title>
     <link rel="stylesheet" href="advicegenerator.css" media="screen" />
+    <script src="https://kit.fontawesome.com/d7f3dbb56f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <article class="container">
-        <h1 class="manrope fs-22">Advice #</h1>
-        
-        <p class="manrope fs-28 fw-800">"Better to wake up late than early."</p>
-    </article>
+    <section class="container">
+        <article>
+            <h1 class="manrope fs-22 center">Advice #1234</h1>
+            <p class="manrope fs-28 fw-800 center">"Wake up, do crimes."</p>
+            <div class="center"><i class="fa-solid fa-dice-five"></i></div>
+        </article>
+    </section>
  
 <!-- Footer Section -->
 <footer>
