--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <section class="container">
         <article>
-            <h1 class="manrope fs-22 center">Advice #1234</h1>
+            <h1 class="manrope fs-22 center neon-green">Advice #1234</h1>
             <p class="manrope fs-28 fw-800 center">"Wake up, do crimes."</p>
-            <div class="center"><i class="fa-solid fa-dice-five"></i></div>
+            <div class="center"><i class="fa-solid fa-grip-lines-vertical"></i></div>
+            
         </article>
     </section>
  
