--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <section class="container">
-        <article>
+      <article class="advice__container">
             <h1 class="manrope fs-22 center neon-green">Advice #1234</h1>
-            <p class="manrope fs-28 fw-800 center">"Wake up, do crimes."</p>
-            <div class="center"><i class="fa-solid fa-grip-lines-vertical"></i></div>
-            
+            <p class="manrope fs-28 fw-800 center light-cyan">"Wake up, do crimes."</p>
+            <img src="images/pattern-divider-mobile.svg" alt="" />
+            <div><i class="fa-solid fa-dice-five fs-28"></i></div>
         </article>
+        
     </section>
  
 <!-- Footer Section -->
