Playing around with code

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <section class="container">
       <article class="advice__container">
-            <h1 class="manrope fs-22 center neon-green">Advice #1234</h1>
-            <p class="manrope fs-28 fw-800 center light-cyan">"Wake up, do crimes."</p>
+           <p>Advice</p><p id="adviceNum" class="manrope fs-22 center neon-green"></p>
+            <p id="adviceArea" class="manrope fs-28 fw-800 center light-cyan">""</p>
             <img src="images/pattern-divider-mobile.svg" alt="" />
-            <div><i class="fa-solid fa-dice-five fs-28"></i></div>
+            <button id="diceBtn">Get new advice</button>
         </article>
         
     </section>
@@ -26,6 +26,8 @@
     Coded by <a href="#">Ashley Perry</a>.
   </div>
 </footer>
+
+<script src="main.js"></script>
 
 </body>
 </html>
