--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       <article class="advice__container">
            <p id="adviceNumber" class="manrope fs-22 neon-green"></p>
             <blockquote id="adviceArea" class="manrope fs-28 fw-800 light-cyan"></blockquote>
-            <img src="images/pattern-divider-mobile.svg" alt="" />
+
+            <picture>
+              <source media="(min-width: 768px)" srcet="images/pattern-divider-desktop.svg" />
+              <img src="images/pattern-divider-mobile.svg" alt="" />
+            </picture>
             <button id="diceBtn" class="btn"><i class="las la-dice-five fs-32"></i></button>
         </article>
         
