Add uppercase style and formatting changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="container">
       <article class="advice__container">
-           <p id="adviceNumber" class="manrope fs-22 neon-green"></p>
+           <p id="adviceNumber" class="manrope fs-22 neon-green uppercase"></p>
             <blockquote id="adviceArea" class="manrope fs-28 fw-800 light-cyan"></blockquote>
 
             <picture>
