--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <body>
     <section class="container">
       <article class="advice__container">
-           <p id="adviceNumber" class="manrope fs-22 neon-green uppercase"></p>
+           <h1 id="adviceNumber" class="manrope fs-13 neon-green uppercase"></h1>
             <blockquote id="adviceArea" class="manrope fs-28 fw-800 light-cyan"></blockquote>
 
-            <picture>
+            <picture class="decorative-divider">
               <source media="(min-width: 768px)" srcet="images/pattern-divider-desktop.svg" />
               <img src="images/pattern-divider-mobile.svg" alt="" />
             </picture>
+
             <button id="diceBtn" class="btn"><i class="las la-dice-five fs-32"></i></button>
         </article>
         
