--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+  <main>
     <section class="container">
       <article class="advice__container">
            <h1 id="adviceNumber" class="manrope fs-13 neon-green uppercase"></h1>
@@ -24,6 +25,7 @@
         </article>
         
     </section>
+  </main>
  
 <!-- Footer Section -->
 <footer>
